--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "name": "xin_manager",
     "private": true,
+    "version": "1.0.0",
     "workspaces": [
         "web",
         "server"
     ],
     "devDependencies": {
-        "concurrently": "^9.2.0"
+        "@types/archiver": "^6.0.3",
+        "@types/node": "^24.3.0",
+        "concurrently": "^9.2.0",
+        "cross-env": "^10.0.0"
     },
     "scripts": {
         "dev:nuxt": "npm --workspace web run dev",
@@ -18,8 +22,17 @@
         "start:nuxt": "npm --workspace web run start",
         "start:nest": "npm --workspace server run start:prod",
         "start": "concurrently -n NUXT,NEST -c cyan,magenta \"npm:start:nuxt\" \"npm:start:nest\"",
+        "start:nuxt:installed": "npm --workspace web run start:installed",
+        "start:nest:installed": "npm --workspace server run start:installed",
+        "start:installed": "concurrently -n NUXT,NEST -c cyan,magenta \"npm:start:nuxt:installed\" \"npm:start:nest:installed\"",
         "lint": "npm --workspace web run lint",
         "format": "npm --workspace web run format",
-        "test": "npm --workspace web run test"
-    }
+        "test": "npm --workspace web run test",
+        "package": "cross-env CUSTOM_VERSION=$npm_package_version node package.ts"
+    },
+    "dependencies": {
+        "archiver": "^7.0.1",
+        "os": "^0.1.2"
+    },
+    "packageManager": "pnpm@10.15.0"
 }
